--- a/src/main/resources/templates/employeeDetails.html
+++ b/src/main/resources/templates/employeeDetails.html
@@ -11,7 +11,7 @@
 
   <h3>Details for <span th:text="${employee.firstName} + ' ' + ${employee.lastName}"></span></h3>
 
-  <form th:action="@{/employees/update(id=${employee.id})}" method="post">
+  <form th:action="@{/employees/update/{id}(id=${employee.id})}" method="post">
     <div class="form-group">
       <label for="firstName">First Name:</label>
       <input type="text" id="firstName" name="firstName" class="form-control" th:value="${employee.firstName}" required>
@@ -45,11 +45,11 @@
     </div>
 
     <div class="form-group">
-      <label for="newGroup">Add New Group:</label>
-      <select id="newGroup" name="newGroup" class="form-control">
-        <option value="" disabled selected>Select a group</option>
+      <label for="newGroups">Add New Groups:</label>
+      <select id="newGroups" name="newGroups" class="form-control" multiple>
+        <option value="" disabled>Select one or more groups</option>
         <option th:each="group : ${groups}"
-                th:value="${group.id}"
+                th:value="${group.name}"
                 th:text="${group.name}"></option>
       </select>
     </div>
