--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,7 +25,7 @@
 
                 </div>
                 <div class="card-body">
-                    <form th:object="${employee}" th:action="@{/register}" method="post">
+                    <form th:object="${employee}" th:action="@{/user/register}" method="post">
 
 
                         <div class="form-group">
