--- a/src/main/resources/templates/employeeDetails.html
+++ b/src/main/resources/templates/employeeDetails.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Employee Details</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
+<header th:replace="fragments/main_header"></header>
+
 <body>
 <div class="container bg-light">
+  <div th:replace="fragments/header::header('Home')"></div>
   <h1 class="my-4">Employee Details</h1>
 
   <h3>Details for <span th:text="${employee.firstName} + ' ' + ${employee.lastName}"></span></h3>
 
-  <form th:action="@{/employees/update/{id}(id=${employee.id})}" method="post">
+  <form th:action="@{update/{id}(id=${employee.id})}" method="post">
     <div class="form-group">
       <label for="firstName">First Name:</label>
       <input type="text" id="firstName" name="firstName" class="form-control" th:value="${employee.firstName}" required>
@@ -53,9 +51,10 @@
                 th:text="${group.name}"></option>
       </select>
     </div>
-
+    <div class="form-group">
     <button type="submit" class="btn btn-success">Update</button>
     <a th:href="@{/employees}" class="btn btn-secondary">Back to Employee List</a>
+    </div>
   </form>
 </div>
 </body>
