--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,7 +12,7 @@
                         </li>
                         <li class="nav-item" >
                         
-                            <a th:class="${#strings.equals(activeLink, 'newEmp')} ? 'nav-link active' : 'nav-link'" href="/employees">Employee</a>
+                            <a th:class="${#strings.equals(activeLink, 'newEmp')} ? 'nav-link active' : 'nav-link'" href="/user/all">Employee</a>
                         </li>
 
                          <li class="nav-item">
