--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
                     </div>                    
 
                  <button type="submit" class="btn btn-success my-2 mx-auto text-center">Login</button>
-                   <a class="my-2 text-black" href="/user/register">Sign Up</a>
+                   <a class="my-2 text-black" href="/register">Sign Up</a>
                     <a class="my-2 text-black" href="/send-otp">Reset Password</a>
                 </form>
             </div>
